Sat May 17 19:30:21 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/LargeSample/Messenger.idl:

          Replaced randomly named parameters with names that are more
          descriptive (i.e. process_id, writer_id, etc).

        * tests/DCPS/LargeSample/DataReaderListener.cpp:
        * tests/DCPS/LargeSample/Writer.cpp:
        * tests/DCPS/ManyToMany/DataReaderListener.cpp:
        * tests/DCPS/ManyToMany/Writer.cpp:
        * tests/DCPS/ManyToMany/publisher.cpp:

          Changed parameter names and log messages because of
          Messenger.idl changes.

Sat May 17 11:59:07 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/LargeSample/DataReaderListener.h:
        * tests/DCPS/LargeSample/DataReaderListener.cpp:

          Added checking the received data to verify that the data is
          valid.

        * tests/DCPS/LargeSample/subscriber.cpp:

          Changed to use constants to determine the number of samples
          to expect.

Sat May 17 03:39:08 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * bin/dcps_tests.lst:

          Removed rtps reliability test, since it doesn't work.

        * tests/DCPS/Reliability/multicast.ini:
        * tests/DCPS/Reliability/rtps.ini:

          Added ini files to support other transports.

        * tests/DCPS/Reliability/run_test.pl:

          Added selecting other transports.

Fri May 16 18:30:59 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * bin/dcps_tests.lst:

          Added rtps reliability test.

Thu May 15 19:46:50 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/transport/framework/TransportReassembly.h:
        * dds/DCPS/transport/framework/TransportReassembly.cpp:

          Fixed case where first fragment is received, only one fragment
          is present (so all contiguous fragments have been received),
          but the last fragment has not been received.

        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.h: